# operating-system-course

./: .gitignore  CMakeLists.txt
chapter2/1_jiffies/: Makefile  jiffies.c
chapter2/2_seconds/: Makefile  seconds.c
chapter4/sudoku/: main.py
chapter5/reader_writer/: main.py
chapter5/simple_shell/: shell.c
jiffies/: .cache.mk  Makefile  jiffies.c
threads/: main.c  main.py
